# TissueAgent

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  debug_complex.py  debug_repl.py  environment.yml  flake.nix  pyproject.toml  test_repl_fix.py
.streamlit/: config.toml
cache/: 2025-07-31_sc_cxg_ds.tsv  2025-07-31_sc_cxg_params.yaml
chromdb_backup/: chroma.sqlite3
demo/: README.md  figure_recreation_lohoff-2b.ipynb  figure_recreation_lohoff-2e.ipynb  notebook_utils.py
demo/data/: colormap.yaml  instructions_lohoff-2e.md
notebooks/: DevelopingHumanHeart_merfish.ipynb  cell2location_visium_deconvolution_tool_test.ipynb  cellxgene_preprocessing.ipynb  cellxgene_preprocessing_new.ipynb  cellxgene_query_test.ipynb  code_rag_tool_test.ipynb  liana_test.ipynb  liana_test.py  ligand-receptor_analysis_funcs_test.ipynb  literature_search_tools_example.ipynb  mouse_brain_merfish_zeng.ipynb  openai_web_search_tool_test.ipynb  python_repl_tool_example.ipynb  report_generator_tool_example.ipynb  spatial_clustering_analysis_funcs_test.ipynb  spatialagent_graph_example.ipynb
notebooks/ad_ccc-analysis/: lr_results_AD.csv  lr_results_control.csv  lr_results_earlyAD.csv  pred_disease.py
notebooks/ccc_visualization/: CCC_plots.ipynb  CCC_plots_all_slides.ipynb  test.ipynb
notebooks/docs/: liana.method.fun._causalnet.build_prior_network.txt  liana.method.fun._causalnet.find_causalnet.txt  liana.method.fun._estimate_metalinks.estimate_metalinks.txt  liana.method.sc._Method.Method.__call__.txt  liana.method.sc._rank_aggregate.AggregateClass.__call__.txt  liana.method.sp._bivariate._spatial_bivariate.SpatialBivariate.__call__.txt  liana.method.sp._misty._Misty.MistyData.txt  liana.method.sp._misty._misty_constructs.genericMistyData.txt  liana.method.sp._misty._misty_constructs.lrMistyData.txt  liana.multi._nmf.estimate_elbow.txt  liana.multi._nmf.nmf.txt  liana.multi.df_to_lr.df_to_lr.txt  liana.multi.to_mudata.adata_to_views.txt  liana.multi.to_mudata.lrs_to_views.txt  liana.multi.to_tensor_c2c.to_tensor_c2c.txt  liana.plotting._connectivity_plot.connectivity.txt  liana.plotting._dotplot.dotplot.txt  liana.plotting._dotplot.dotplot_by_sample.txt  liana.plotting._misty_plots.contributions.txt  liana.plotting._misty_plots.interactions.txt  liana.plotting._misty_plots.target_metrics.txt  liana.plotting._tileplot.tileplot.txt  liana.resource._reassemble_complexes.explode_complexes.txt  liana.resource.get_metalinks.describe_metalinks.txt  liana.resource.get_metalinks.get_metalinks.txt  liana.resource.get_metalinks.get_metalinks_values.txt  liana.resource.select_resource.select_resource.txt  liana.resource.select_resource.show_resources.txt  liana.utils._getters.get_factor_scores.txt  liana.utils._getters.get_variable_loadings.txt  liana.utils.interpolate_adata.interpolate_adata.txt  liana.utils.mdata_to_anndata.mdata_to_anndata.txt  liana.utils.obsm_to_adata.obsm_to_adata.txt  liana.utils.spatial_neighbors.spatial_neighbors.txt  liana.utils.transform.neg_to_zero.txt  liana.utils.transform.zi_minmax.txt
src/: api_keys.py  app.py  app_utils.py  config.py  logger.py  memori_integration.py
(+370 files in other folders)
